--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h3>Associate Director</h3>
         <img style="max-width:250px;max-height:250px" src="462914810_3874720309428294_4919017049160558717_n.jpg">
         <p>PRAVEEN KUMAR</p>
-        <button onclick="openapraveenPage()"  >Learn More</button>
+        <button onclick="openpraveenPage()"  >Learn More</button>
       </div>
       <div class="card">
         <h3>Assistant Director</h3>
